[gd_scene format=3 uid="uid://rbm7q3y7mail"]

[ext_resource type="Script" uid="uid://bhux77br4y1w3" path="res://Scripts/password.gd" id="1_6lmhe"]
[ext_resource type="Texture2D" uid="uid://bqwlg6x1u18pe" path="res://Assets/UI/rectangle_calc.png" id="1_u6vi1"]
[ext_resource type="Texture2D" uid="uid://bltnrnksoervk" path="res://Assets/UI/circle_black.png" id="2_6lmhe"]
[ext_resource type="Texture2D" uid="uid://ewwysith4t7u" path="res://Assets/UI/keyboard_1_outline.png" id="3_61dyc"]
[ext_resource type="Texture2D" uid="uid://cvkp5psxphu4m" path="res://Assets/UI/keyboard_2_outline.png" id="4_8jln6"]
[ext_resource type="Texture2D" uid="uid://c277mwr3eqckk" path="res://Assets/UI/keyboard_3_outline.png" id="5_lk1v6"]
[ext_resource type="Texture2D" uid="uid://b6nsbq2li2658" path="res://Assets/UI/keyboard_4_outline.png" id="6_mwt0o"]
[ext_resource type="Texture2D" uid="uid://hn4pfulftqbr" path="res://Assets/UI/keyboard_5_outline.png" id="7_bl413"]
[ext_resource type="Texture2D" uid="uid://d13ifgovl3b1t" path="res://Assets/UI/keyboard_6_outline.png" id="8_apsmm"]
[ext_resource type="Texture2D" uid="uid://b0qbgwra6abid" path="res://Assets/UI/keyboard_7_outline.png" id="9_qv1l3"]
[ext_resource type="Texture2D" uid="uid://dhivuxr5kc7mv" path="res://Assets/UI/keyboard_8_outline.png" id="10_iifc7"]
[ext_resource type="Texture2D" uid="uid://cx1odymjamkia" path="res://Assets/UI/keyboard_9_outline.png" id="11_tivyf"]
[ext_resource type="Texture2D" uid="uid://bh8knahpnutiv" path="res://Assets/UI/keyboard_0_outline.png" id="12_koq8q"]
[ext_resource type="Texture2D" uid="uid://ri3uehb2g6sv" path="res://Assets/UI/keyboard_numpad_enter_outline.png" id="13_pnc7l"]

[node name="PASSWORD" type="Node2D" unique_id=1261077482]
script = ExtResource("1_6lmhe")

[node name="TextureRect5" type="TextureRect" parent="." unique_id=114567741]
offset_left = 386.0
offset_top = 74.0
offset_right = 786.0
offset_bottom = 166.0
scale = Vector2(0.9599988, 0.9948538)
mouse_filter = 0
texture = ExtResource("1_u6vi1")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=700491921]
offset_left = 388.5
offset_top = 74.0
offset_right = 763.5
offset_bottom = 574.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 0
theme_override_constants/separation = 10

[node name="SCREEN" type="HBoxContainer" parent="VBoxContainer" unique_id=814383823]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0

[node name="circle1" type="TextureRect" parent="VBoxContainer/SCREEN" unique_id=1868084707]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_6lmhe")

[node name="circle2" type="TextureRect" parent="VBoxContainer/SCREEN" unique_id=1636286848]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_6lmhe")

[node name="circle3" type="TextureRect" parent="VBoxContainer/SCREEN" unique_id=2097067473]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_6lmhe")

[node name="circle4" type="TextureRect" parent="VBoxContainer/SCREEN" unique_id=1692677374]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_6lmhe")

[node name="ROW1" type="HBoxContainer" parent="VBoxContainer" unique_id=624512317]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0

[node name="1" type="Button" parent="VBoxContainer/ROW1" unique_id=1372632936]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("3_61dyc")
icon_alignment = 1
expand_icon = true

[node name="2" type="Button" parent="VBoxContainer/ROW1" unique_id=260147540]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("4_8jln6")
icon_alignment = 1
expand_icon = true

[node name="3" type="Button" parent="VBoxContainer/ROW1" unique_id=1373190804]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("5_lk1v6")
icon_alignment = 1
expand_icon = true

[node name="ROW2" type="HBoxContainer" parent="VBoxContainer" unique_id=1219963357]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0

[node name="4" type="Button" parent="VBoxContainer/ROW2" unique_id=1974986106]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("6_mwt0o")
icon_alignment = 1
expand_icon = true

[node name="5" type="Button" parent="VBoxContainer/ROW2" unique_id=1295423243]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("7_bl413")
icon_alignment = 1
expand_icon = true

[node name="6" type="Button" parent="VBoxContainer/ROW2" unique_id=702296246]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("8_apsmm")
icon_alignment = 1
expand_icon = true

[node name="ROW3" type="HBoxContainer" parent="VBoxContainer" unique_id=1738429054]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0

[node name="7" type="Button" parent="VBoxContainer/ROW3" unique_id=1120683926]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("9_qv1l3")
icon_alignment = 1
expand_icon = true

[node name="8" type="Button" parent="VBoxContainer/ROW3" unique_id=900599591]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("10_iifc7")
icon_alignment = 1
expand_icon = true

[node name="9" type="Button" parent="VBoxContainer/ROW3" unique_id=1095185151]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("11_tivyf")
icon_alignment = 1
expand_icon = true

[node name="ROW4" type="HBoxContainer" parent="VBoxContainer" unique_id=1946742454]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0

[node name="0" type="Button" parent="VBoxContainer/ROW4" unique_id=704958429]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("12_koq8q")
icon_alignment = 1
expand_icon = true

[node name="Enter" type="Button" parent="VBoxContainer/ROW4" unique_id=821507470]
layout_mode = 2
size_flags_horizontal = 3
icon = ExtResource("13_pnc7l")
icon_alignment = 1
expand_icon = true
